<resources>
    <string name="app_name">优课学机构版</string>
    <string name="sys_next">下一步</string>
    <string name="sys_type_selected_title">类型选择</string>
    <string name="sys_num_selected_title">数字选择</string>
    <string name="sys_delete">删除</string>
    <string name="sys_edit">编辑</string>
    <string name="sys_null">暂无</string>
    <string name="sys_submit_toast">正在执行中</string>
    <string name="sys_toast_success">成功</string>
    <string name="sys_toast_fail">失败</string>
    <string name="sys_pic_edit_title">照片查看</string>
    <string name="sys_input_hint">请输入</string>
    <string name="sys_base_pic_and_message_edit">图文编辑器</string>
    <string name="csys_base_pic_and_message_info">图文详情查看</string>
    <string name="sys_save_fail_toast">保存失败</string>
    <string name="sys_save_and_exit_toast">你还没有保存数据,是否确认放弃保存?</string>
    <string name="sys_upload_pic">上传照片</string>
    <string name="sys_role_fail_toast">没有相关权限!</string>
    <string name="sys_version_info_defailt_title">优课学_机构版V%1$s来啦！</string>
    <string name="sys_activity_title_pic_message">图文编辑</string>
    <string name="sys_activity_user_agreement_title">用户协议内容</string>
    <string name="activity_webview_title_brand">品牌详情</string>
    <string name="activity_webview_title_curriculum">班课详情</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="phone_code_textview_reset">重新获取(%1$ss)</string>
    <string name="login_textview_login">登录</string>
    <string name="login_textview_forget_password">忘记密码?</string>
    <string name="login_textview_register_password">免费入驻</string>
    <string name="login_edittext_input_phone">输入优课学账号(注册手机号)</string>
    <string name="login_edittext_input_password">输入密码</string>
    <string name="login_success_toast">登录成功</string>
    <string name="login_fail_toast">登录失败</string>
    <string name="login_edittext_input_phone_toast_null">请输入手机号</string>
    <string name="login_edittext_input_phone_toast_num_excption">手机号格式错误</string>
    <string name="login_edittext_input_pw_toast_null">请输入密码</string>
    <string name="login_edittext_input_pw_toast_num_excption">请输入6-16位密码</string>
    <string name="selected_brand_activity_title">选择品牌</string>
    <string name="selected_brand_activity_notice">该手机号已绑定%1$s个品牌,请选择</string>
    <string name="register_edittext_input_phone">(+86) 输入手机号码</string>
    <string name="register_edittext_input_verification_code">输入验证码</string>
    <string name="register_edittext_get_verification_code">获取验证码</string>
    <string name="register_textview_register">注册</string>
    <string name="register_edittext_get_verification_code_toast">请获取验证码</string>
    <string name="register_textview_register_user_agreement1">注册代表你已阅读并同意</string>
    <string name="register_textview_register_user_agreement2">《优课学用户协议》</string>
    <string name="register_textview_register_back_login">返回登录</string>
    <string name="forget_password_textview_title">找回密码</string>
    <string name="forget_password_textview_next">下一步</string>
    <string name="set_password_textview_commint">完成</string>
    <string name="set_password_textview_title">设置密码</string>
    <string name="find_password_textview_title">找回密码</string>
    <string name="set_password_edittext_input">输入6-16位密码</string>
    <string name="set_password_edittext_new_input">输入6-16位新密码</string>
    <string name="user_center_about_us_title">关于我们</string>
    <string name="home_title">主界面</string>
    <string name="authentication_home_title">申请实名登记</string>
    <string name="authentication_home_item1_yzzz">营业执照登记</string>
    <string name="authentication_home_item2_bxxkz">办学许可证登记</string>
    <string name="authentication_home_text_des">登记后,我能享受到这些服务～</string>
    <string name="authentication_home_text_item1_title">班课推广</string>
    <string name="authentication_home_text_item2_title">品牌推广</string>
    <string name="authentication_home_text_item3_title">名师推广</string>
    <string name="authentication_home_text_item4_title">运营管理</string>
    <string name="authentication_home_text_item5_title">营销支持</string>
    <string name="authentication_home_text_item6_title">统计分析</string>
    <string name="authentication_home_text_wait_des">暂不登记,先看看～</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_bxxkzj"> · 请按照示例图提供办学许可证件图。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_ppsqs"> · 请按照示例图提供品牌授权书。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_sbzcz"> · 请按照示例图提供商标注册证图。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_sfzbm"> · 请按照示例图提供身份证背面图。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_sfzzm"> · 请按照示例图提供身份证正面图。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_yyzz"> · 请按照示例图提供营业执照图。</string>
    <string name="authentication_register_main_bxxk_sample_bxxkz_second"> · 照片要四角对齐,若模糊,太暗,有遮挡,则不与通过。</string>
    <string name="authentication_register_main_bxxk_title">办学许可登记</string>
    <string name="authentication_register_main_bxxk_notice_des">完成实名登记,学生就能搜索到你们啦～</string>
    <string name="authentication_register_main_bxxk_xxmc">学校名称</string>
    <string name="authentication_register_main_bxxk_xxmc_hint">办学许可证上单位名称</string>
    <string name="authentication_register_main_bxxk_bxxkz">办学许可证</string>
    <string name="authentication_register_main_bxxk_cksl">查看示例</string>
    <string name="authentication_register_main_bxxk_fzrsfz_zm">负责人身份证(正面)</string>
    <string name="authentication_register_main_bxxk_fzrsfz_fm">负责人身份证(反面)</string>
    <string name="authentication_register_main_bxxk_szcs">所在城市</string>
    <string name="authentication_register_main_bxxk_szcs_hint">办学许可证上的地址</string>
    <string name="authentication_register_main_yyzz_title">营业执照登记</string>
    <string name="authentication_register_main_yyzz_notice_des">完成实名登记,学生就能搜索到你们啦～</string>
    <string name="authentication_register_main_yyzz_xxmc">公司名称</string>
    <string name="authentication_register_main_yyzz_xxmc_hint">营业执照单位名称</string>
    <string name="authentication_register_main_yyzz_bxxkz">营业执照副本</string>
    <string name="authentication_register_main_yyzz_cksl">查看示例</string>
    <string name="authentication_register_main_yyzz_fzrsfz_zm">法人身份证(正面)</string>
    <string name="authentication_register_main_yyzz_fzrsfz_fm">法人身份证(反面)</string>
    <string name="authentication_register_main_yyzz_szcs">所在城市</string>
    <string name="authentication_register_main_yyzz_szcs_hint">营业执照上的所住地址</string>
    <string name="authentication_register_main_xxmc_toast">请填写学校名称</string>
    <string name="authentication_register_main_xxbxxk_toast">请上传办学许可证</string>
    <string name="authentication_register_main_xxfzrsfzzm_toast">请上传负责人身份证(正面)</string>
    <string name="authentication_register_main_xxfzrsfzfm_toast">请上传负责人身份证(反面)</string>
    <string name="authentication_register_main_qymc_toast">请填写公司名称</string>
    <string name="authentication_register_main_qyyyzffb_toast">请上传营业执照副本</string>
    <string name="authentication_register_main_qyfrsfzzm_toast">请上传法人身份证(正面)</string>
    <string name="authentication_register_main_qyfrsfzfm_toast">请上传法人身份证(反面)</string>
    <string name="authentication_register_main_city_toast">请选择所在城市</string>
    <string name="authentication_register_next_bxxk_notice_des">留下联系信息,方便联系到你～</string>
    <string name="authentication_register_next_bxxk_ywlxr">业务联系人</string>
    <string name="authentication_register_next_bxxk_ywlxr_hint">请输入联系人名称</string>
    <string name="authentication_register_next_bxxk_lxsj">联系手机</string>
    <string name="authentication_register_next_bxxk_lxsj_hint">请输入联系人手机</string>
    <string name="authentication_register_next_bxxk_zjdh">座机电话</string>
    <string name="authentication_register_next_bxxk_zjdh_hint">请输入公司座机</string>
    <string name="authentication_register_next_bxxk_tjdj">提交登记</string>
    <string name="authentication_register_result_info_title">申请实名登记</string>
    <string name="authentication_register_result_state0_title">实名登记审核中...</string>
    <string name="authentication_register_result_state0_des">优课学会在三个工作日内完成审核,审核结果请关注短信通知.</string>
    <string name="authentication_register_result_state1_title">已完成实名认证!</string>
    <string name="authentication_register_result_state2_title">审核未通过!</string>
    <string name="authentication_register_result_state2_des">未通过的原因:</string>
    <string name="home_nav_item_gzt">工作台</string>
    <string name="home_nav_item_ll">联络</string>
    <string name="home_nav_item_jx">教学</string>
    <string name="home_nav_item_yy">运营</string>
    <string name="persion_center_info_jgname">这里显示机构名称</string>
    <string name="persion_center_info_jgphone">135 5100 2323</string>
    <string name="persion_center_info_jg_persion_info">个人资料</string>
    <string name="persion_center_info_jg_auto">已实名登记</string>
    <string name="persion_center_info_add_brand"> + 添加品牌</string>
    <string name="persion_center_info_jg_ppyy">品牌主页</string>
    <string name="persion_center_info_jg_jgzy">机构主页</string>
    <string name="persion_center_info_jg_jgqb">机构钱包</string>
    <string name="persion_center_info_jg_jydd">交易订单</string>
    <string name="persion_center_info_jg_khwf">客户服务</string>
    <string name="persion_center_info_jg_yjfk">意见反馈</string>
    <string name="persion_center_info_jg_sz">设置</string>
    <string name="persion_center_info_edit_userinfo">修改用户信息</string>
    <string name="persion_center_info_edit_userinfo_header">头像</string>
    <string name="persion_center_info_edit_userinfo_notices">-你正修改用户信息-</string>
    <string name="persion_center_info_jg_setting_message_push">消息推送设置</string>
    <string name="persion_center_info_jg_setting_change_pw">修改密码</string>
    <string name="persion_center_info_jg_setting_check_update">检测更新</string>
    <string name="persion_center_info_jg_setting_about_us">关于我们</string>
    <string name="persion_center_info_jg_setting_logout">退出登录</string>
    <string name="persion_center_info_jg_setting_change_pw_title">安全验证</string>
    <string name="persion_center_info_jg_setting_change_pw_notices">设置密码需要先验证你的手机号码</string>
    <string name="persion_center_info_jg_setting_change_yz_notices">已验证注册手机</string>
    <string name="brandmanager_activity_base_info_item_mamager_ywlxr">业务联系人</string>
    <string name="brandmanager_activity_base_info_item_mamager_lxsj">联系手机</string>
    <string name="brandmanager_activity_base_info_item_mamager_zjdh">座机电话</string>
    <string name="brandmanager_activity_base_info_item_mamager_ywlxr_hint">请输入业务联系人姓名</string>
    <string name="brandmanager_activity_base_info_item_mamager_lxsj_hint">请输入业务联系人手机号</string>
    <string name="brandmanager_activity_base_info_item_mamager_zjdh_hint">请输入公司座机</string>
    <string name="brandmanager_activity_base_info_item_mamager_notice">1.申请品牌登记 2.平台审核</string>
    <string name="emp_manager_activity_invited_emp_share_itme1">通过链接邀请</string>
    <string name="emp_manager_activity_invited_emp_share_itme1_link">分享链接</string>
    <string name="emp_manager_activity_invited_emp_share_itme2">通过团队二维码邀请</string>
    <string name="emp_manager_activity_invited_emp_share_itme2_des">扫一扫上方二维码，加入团队</string>
    <string name="emp_manager_activity_invited_emp_share_itme2_link">分享二维码</string>
    <string name="emp_manager_activity_invited_emp_share_itme3">申请人列表</string>
    <string name="activity_about_us_item1">优课学是汇聚教育行业顶尖专家及互联网开发精英，充分发掘教育培训行业资源并有效整合，运用“互联网+”理念，结合教育培训行业特殊运营规律，形成独具特色的、专门服务于教育培训机构的互联平台。</string>
    <string name="activity_about_us_item2">优课学致力于为教育培训机构打造个性展示空间，呈现优质课程，提供全面教育资讯，配合科学管理，为学员提供报名、选课、支付、评价等网络平台服务。</string>
    <string name="activity_about_us_item3">优课学让教育培训机构拥有呈现领地，科学管理，优化运营，精准营销，定位宣传。</string>
    <string name="activity_about_us_item4">优课学是培训机构提升品牌打造良好口碑的唯一捷径。</string>
    <string name="activity_about_us_item5">优课学强大的管理功能及宣传推广，让机构的运营效率大大提升，同时为优课学会员提供海量教育资讯及优质课程。</string>
    <string name="activity_about_us_item6">优课学专注于教育培训机构的良性发展与学员的能力提升，致力于打造健康的教育培训互联生态圈。</string>
</resources>