<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auto_brand_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ykx.organization.pages.home.operates.brandmanager.AutoBrandSubmitActivity">
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="@dimen/size_14"
        android:text="@string/brandmanager_activity_base_info_item_mamager_notice"
        android:textColor="@color/default_second_text_color"
        android:background="@color/default_line_color"
        android:layout_height="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/list_view_item_margin_left"
        android:layout_marginRight="@dimen/list_view_item_margin_right"
        android:layout_height="70dp">

        <TextView
            android:textSize="@dimen/size_14"
            android:gravity="center_vertical"
            android:text="@string/brandmanager_activity_base_info_item_mamager_ywlxr"
            android:id="@+id/ywlxt_view"
            android:textColor="@color/theme_first_text_color"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"/>

        <EditText
            android:hint="@string/brandmanager_activity_base_info_item_mamager_ywlxr_hint"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:id="@+id/persion_name_edittext"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/size_14"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/default_line_color"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/list_view_item_margin_left"
        android:layout_marginRight="@dimen/list_view_item_margin_right"
        android:layout_height="70dp">

        <TextView
            android:textSize="@dimen/size_14"
            android:gravity="center_vertical"
            android:text="@string/brandmanager_activity_base_info_item_mamager_lxsj"
            android:id="@+id/lxsj_view"
            android:textColor="@color/theme_first_text_color"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"/>

        <EditText
            android:hint="@string/brandmanager_activity_base_info_item_mamager_lxsj_hint"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:background="@null"
            android:id="@+id/persion_telphone_edittext"
            android:textCursorDrawable="@null"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/size_14"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/default_line_color"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/list_view_item_margin_left"
        android:layout_marginRight="@dimen/list_view_item_margin_right"
        android:layout_height="70dp">

        <TextView
            android:textSize="@dimen/size_14"
            android:gravity="center_vertical"
            android:text="@string/brandmanager_activity_base_info_item_mamager_zjdh"
            android:id="@+id/zjdh_view"
            android:textColor="@color/theme_first_text_color"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"/>

        <EditText
            android:hint="@string/brandmanager_activity_base_info_item_mamager_zjdh_hint"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:id="@+id/persion_phone_edittext"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="12"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/size_14"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/default_line_color"
            android:layout_height="1dp"/>
    </RelativeLayout>



    <com.ykx.baselibs.views.SubmitStateView
        android:layout_marginTop="60dip"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:onClick="doAction"
        android:id="@+id/persion_submitview"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</LinearLayout>
