<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ykx.organization.pages.RegisterActivity">

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ykx.baselibs.views.CustomEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.ykx.baselibs.views.CustomEditText>


        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.ykx.baselibs.views.CustomEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.ykx.baselibs.views.CustomEditText>

            <TextView
                android:onClick="getPhoneCodeAction"
                android:layout_alignParentRight="true"
                android:text="@string/register_edittext_get_verification_code"
                android:textColor="@color/theme_main_background_color"
                android:textSize="@dimen/size_14"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
        </RelativeLayout>


        <TextView
            android:layout_marginTop="60dip"
            android:onClick="registerAction"
            android:text="@string/register_textview_register"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16"
            android:gravity="center"
            android:background="@drawable/textview_selector"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/register_textview_register_user_agreement1"
                android:textColor="@color/default_unselected_color"
                android:gravity="center"
                android:textSize="@dimen/size_12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <TextView
                android:onClick="yhxyAction"
                android:text="@string/register_textview_register_user_agreement2"
                android:textColor="@color/theme_main_background_color"
                android:gravity="center"
                android:textSize="@dimen/size_12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/register_textview_register_back_login"
        android:onClick="callBackLoginAction"
        android:textColor="@color/theme_main_background_color"
        android:textSize="@dimen/size_14"
        android:gravity="center"
        android:background="@drawable/textview_null_selector"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>


</RelativeLayout>

